--- a/src/app/components/instructions/instructions.component.html
+++ b/src/app/components/instructions/instructions.component.html
@@ -3,7 +3,7 @@
 <div class="bg-white text-black rounded-lg shadow-lg p-6 text-right text-sm mx-3 sm:mx-0 mb-6">
   <div class="flex flex-col gap-8">
     <div class="flex flex-col sm:flex-row gap-3 sm:gap-5 items-start">
-      <img alt="bullet" src="/images/bullet.svg" loading="lazy" />
+      <img alt="bullet" src="images/bullet.svg" loading="lazy" />
 
 
       <p> יש לכם מספר בלתי מוגבל של ניחושים: מצאו את שחקן הכדורגל הסודי שהוא התשובה שמסתתרת בכל יום.
@@ -13,14 +13,14 @@
     </div>
     <div class="flex flex-col sm:flex-row gap-3 sm:gap-5 items-start">
 
-      <img alt="bullet" src="/images/bullet.svg" loading="lazy" />
+      <img alt="bullet" src="images/bullet.svg" loading="lazy" />
       <p> ⁠השחקנים שניתן לחפש ממוינים על ידי אלגוריתם מיוחד בהתאם לרמת הדמיון שלהם לשחקן הסודי.
         האלגוריתם ניתח אלפי שחקני כדורגל מהעבר ומההווה, הוא משתמש במאפיינים של השחקן, כגון לאום, קבוצות שבהן שיחק, גיל
         ותפקיד במגרש, כדי לחשב את מידת הדמיון ביניהם.
         התפקיד שלכם זה לנסות למצוא את המשותף עד שתגיעו לשחקן המדובר.</p>
     </div>
     <div class="flex flex-col sm:flex-row gap-3 sm:gap-5 items-start">
-      <img alt="bullet" src="/images/bullet.svg" loading="lazy" />
+      <img alt="bullet" src="images/bullet.svg" loading="lazy" />
 
       <div class="flex flex-col gap-2">
         <p>דוגמא, אם השחקן הסודי היה ליונל מסי וניחשתם את דייגו מראדונה:
@@ -60,7 +60,7 @@
 
     <div class="flex flex-col sm:flex-row gap-3 sm:gap-5 items-start">
 
-      <img alt="bullet" src="/images/bullet.svg" loading="lazy" />
+      <img alt="bullet" src="images/bullet.svg" loading="lazy" />
       <p> ⁠השחקנים שניתן לחפש ממוינים על ידי אלגוריתם מיוחד בהתאם לרמת הדמיון שלהם לשחקן הסודי.
         האלגוריתם ניתח אלפי שחקני כדורגל מהעבר ומההווה, הוא משתמש במאפיינים של השחקן, כגון לאום, קבוצות שבהן שיחק, גיל
         ותפקיד במגרש, כדי לחשב את מידת הדמיון ביניהם.
@@ -68,7 +68,7 @@
     </div>
     <div class="flex flex-col sm:flex-row gap-3 sm:gap-5 items-start">
 
-      <img alt="bullet" src="/images/bullet.svg" loading="lazy" />
+      <img alt="bullet" src="images/bullet.svg" loading="lazy" />
       <p> ⁠השחקנים שניתן לחפש ממוינים על ידי אלגוריתם מיוחד בהתאם לרמת הדמיון שלהם לשחקן הסודי.
         האלגוריתם ניתח אלפי שחקני כדורגל מהעבר ומההווה, הוא משתמש במאפיינים של השחקן, כגון לאום, קבוצות שבהן שיחק, גיל
         ותפקיד במגרש, כדי לחשב את מידת הדמיון ביניהם.
@@ -76,7 +76,7 @@
     </div>
     <div class="flex flex-col sm:flex-row gap-3 sm:gap-5 items-start">
 
-      <img alt="bullet" src="/images/bullet.svg" loading="lazy" />
+      <img alt="bullet" src="images/bullet.svg" loading="lazy" />
       <p> ⁠השחקנים שניתן לחפש ממוינים על ידי אלגוריתם מיוחד בהתאם לרמת הדמיון שלהם לשחקן הסודי.
         האלגוריתם ניתח אלפי שחקני כדורגל מהעבר ומההווה, הוא משתמש במאפיינים של השחקן, כגון לאום, קבוצות שבהן שיחק, גיל
         ותפקיד במגרש, כדי לחשב את מידת הדמיון ביניהם.
