--- a/src/app/components/game/game.component.css
+++ b/src/app/components/game/game.component.css
@@ -1,3 +1,16 @@
 :host {
     display: contents;
 }
+
+ul {
+    backdrop-filter: blur(5px);
+    border: 2px solid rgb(2 11 87 / 22%);
+}
+
+ul li {
+    margin-bottom: 1.5rem;
+}
+
+ul li:last-child {
+    margin-bottom: .5rem;;
+}
