--- a/src/app/components/autocomplete/autocomplete.component.html
+++ b/src/app/components/autocomplete/autocomplete.component.html
@@ -1,4 +1,4 @@
-<div class="relative">
+<div class="relative w-full">
     <!-- Input Field -->
     <div class="flex items-center border border-[#020B57] overflow-hidden relative bg-[#FAFAFA57]"
         [ngClass]="{'rounded-xl': !filtered.length, 'rounded-t-xl border-b-0': filtered.length}">
