--- a/src/app/components/game-nav/game-nav.component.html
+++ b/src/app/components/game-nav/game-nav.component.html
@@ -21,7 +21,7 @@
 
     <!-- Center Text -->
     <div class="font-bold text-xl min-w-[100px] text-center">
-        מס׳ 245
+        מס׳ {{gameId}}
     </div>
 
     
