--- a/src/app/components/edit-player/edit-player.component.html
+++ b/src/app/components/edit-player/edit-player.component.html
@@ -2,51 +2,74 @@
   <div class="max-w-3xl mx-auto">
     <div class="bg-white shadow sm:rounded-lg">
       <div class="px-4 py-5 sm:p-6">
-        <h2 class="text-2xl font-bold text-gray-900 mb-6">Edit Player</h2>
-        <form (ngSubmit)="onSubmit()" class="space-y-6">
-          <div class="grid grid-cols-1 gap-y-6 gap-x-4 sm:grid-cols-2">
-            <div>
-              <label for="firstName" class="block text-sm font-medium text-gray-700">First Name</label>
-              <input type="text" id="firstName" [(ngModel)]="player.firstName" name="firstName" required
-                class="mt-1 block w-full border border-gray-300 rounded-md shadow-sm py-2 px-3 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm">
+        <h2 class="text-2xl font-bold text-gray-900 mb-6">ערוך שחקן</h2>
+        <app-autocomplete [isSearchMode]="true" (selected)="onPlayerSelected($event)"
+          [showSelectedText]="true"></app-autocomplete>
+
+        <form (ngSubmit)="onSubmit()" [formGroup]="playerForm" class="space-y-6 mt-10">
+          <fieldset [disabled]="!selectedPlayer">
+            <div class="grid grid-cols-1 gap-y-6 gap-x-4 sm:grid-cols-2">
+              <div>
+                <label for="first_name_he" class="flex justify-between items-center text-sm font-medium text-gray-700">
+                  שם פרטי
+                  <span class="text-red-500 text-xs" *ngIf="getFormControlError('first_name_he')">
+                    {{getFormControlError('first_name_he')}}
+                  </span>
+                </label>
+                <input type="text" id="first_name_he" formControlName="first_name_he"
+                  class="mt-1 block w-full border border-gray-300 rounded-md shadow-sm py-2 px-3 focus:outline-none focus:ring-blue-500 focus:border-blue-500 sm:text-sm">
+              </div>
+
+              <div>
+                <label for="last_name_he" class="flex justify-between items-center text-sm font-medium text-gray-700">
+                  שם משפחה
+                  <span class="text-red-500 text-xs" *ngIf="getFormControlError('last_name_he')">
+                    {{getFormControlError('last_name_he')}}
+                  </span>
+                </label>
+                <input type="text" id="last_name_he" formControlName="last_name_he"
+                  class="mt-1 block w-full border border-gray-300 rounded-md shadow-sm py-2 px-3 focus:outline-none focus:ring-blue-500 focus:border-blue-500 sm:text-sm">
+              </div>
+
+              <div>
+                <label for="display_name_he" class="flex justify-between items-center text-sm font-medium text-gray-700">
+                  שם תצוגה
+                  <span class="text-red-500 text-xs" *ngIf="getFormControlError('display_name_he')">
+                    {{getFormControlError('display_name_he')}}
+                  </span>
+                </label>
+                <input type="text" id="display_name_he" formControlName="display_name_he"
+                  class="mt-1 block w-full border border-gray-300 rounded-md shadow-sm py-2 px-3 focus:outline-none focus:ring-blue-500 focus:border-blue-500 sm:text-sm">
+              </div>
+
+              <div>
+                <label for="nationality_id" class="flex justify-between items-center text-sm font-medium text-gray-700">
+                  מדינה
+                  <span class="text-red-500 text-xs" *ngIf="getFormControlError('nationality_id')">
+                    {{getFormControlError('nationality_id')}}
+                  </span>
+                </label>
+                <ng-select [items]="countries" bindLabel="name" bindValue="id" [searchable]="true"
+                  placeholder="בחר מרשימה" formControlName="nationality_id" [clearable]="false"
+                  class="w-full mt-1 shadow-sm">
+                </ng-select>
+              </div>
             </div>
 
-            <div>
-              <label for="lastName" class="block text-sm font-medium text-gray-700">Last Name</label>
-              <input type="text" id="lastName" [(ngModel)]="player.lastName" name="lastName" required
-                class="mt-1 block w-full border border-gray-300 rounded-md shadow-sm py-2 px-3 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm">
+            <div class="flex justify-end mt-18">
+              <button type="submit" [disabled]="submitting"
+                class="flex items-center gap-2 bg-blue-800 px-6 py-2 rounded-xl text-white font-bold hover:bg-blue-600 cursor-pointer text-lg disabled:opacity-75">
+                שמור שחקן
+                <svg class="h-5 w-5 animate-spin text-white" xmlns="http://www.w3.org/2000/svg" fill="none"
+                  viewBox="0 0 24 24" width="18" height="18" *ngIf="submitting">
+                  <circle class="opacity-25" cx="12" cy="12" r="10" stroke="white" stroke-width="4"></circle>
+                  <path class="opacity-75" fill="white" d="M4 12a8 8 0 018-8v8H4z"></path>
+                </svg>
+              </button>
             </div>
-
-            <div>
-              <label for="displayName" class="block text-sm font-medium text-gray-700">Display Name</label>
-              <input type="text" id="displayName" [(ngModel)]="player.displayName" name="displayName" required
-                class="mt-1 block w-full border border-gray-300 rounded-md shadow-sm py-2 px-3 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm">
-            </div>
-
-            <div>
-              <label for="playerNumber" class="block text-sm font-medium text-gray-700">Player Number</label>
-              <input type="number" id="playerNumber" [(ngModel)]="player.playerNumber" name="playerNumber" required
-                class="mt-1 block w-full border border-gray-300 rounded-md shadow-sm py-2 px-3 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm">
-            </div>
-
-            <div class="sm:col-span-2">
-              <label for="country" class="block text-sm font-medium text-gray-700">Country</label>
-              <select id="country" [(ngModel)]="player.country" name="country" required
-                class="mt-1 block w-full border border-gray-300 rounded-md shadow-sm py-2 px-3 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm">
-                <option value="">Select a country</option>
-                <option *ngFor="let country of countries" [value]="country">{{country}}</option>
-              </select>
-            </div>
-          </div>
-
-          <div class="flex justify-end">
-            <button type="submit"
-              class="inline-flex justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
-              Save Changes
-            </button>
-          </div>
+          </fieldset>
         </form>
       </div>
     </div>
   </div>
-</div> 
+</div>
