--- a/src/app/components/edit-player/edit-player.component.html
+++ b/src/app/components/edit-player/edit-player.component.html
@@ -46,7 +46,7 @@
 
               <div>
                 <label for="nationality_id" class="flex justify-between items-center text-sm font-medium text-gray-700">
-                  מדינה
+                  לאום
                   <span class="text-red-500 text-xs" *ngIf="getFormControlError('nationality_id')">
                     {{getFormControlError('nationality_id')}}
                   </span>
