--- a/src/app/components/result-popup/result-popup.component.html
+++ b/src/app/components/result-popup/result-popup.component.html
@@ -36,7 +36,7 @@
       חשוף את התשובה
     </button>
 
-    <a href="" class="text-sm text-gray-600 mt-2 flex gap-2 justify-center items-center mt-6">
+    <a href="" class="text-sm text-gray-600 flex gap-2 justify-center items-center mt-6">
       <svg width="17" height="16" viewBox="0 0 17 16" fill="none" xmlns="http://www.w3.org/2000/svg">
         <g clip-path="url(#clip0_2662_82)">
           <path
