--- a/src/app/components/game-form/game-form.component.html
+++ b/src/app/components/game-form/game-form.component.html
@@ -1,5 +1,7 @@
 <div class="min-h-screen bg-gray-50 py-12 px-4 sm:px-6 lg:px-8">
     <div class="max-w-3xl mx-auto">
+        <app-admin-menu></app-admin-menu>
+        
         <div class="bg-white shadow sm:rounded-lg">
             <div class="px-4 py-5 sm:p-6">
                 <h2 class="text-2xl font-bold text-gray-900 mb-6 flex gap-3 items-center">
