--- a/src/app/components/game/game.component.html
+++ b/src/app/components/game/game.component.html
@@ -1,4 +1,4 @@
-<div class="relative w-full min-h-[calc(100vh-62px)] bg-cover bg-center flex flex-col" *ngIf="gameInfo">
+<div class="relative w-full min-h-[calc(100vh-62px)] bg-cover bg-center flex flex-col" *ngIf="game$ | async as gameInfo">
   <div class="p-4 pb-0 max-w-lg mx-auto w-full flex-grow flex flex-col">
     <div class="flex gap-3">
       <app-autocomplete (selected)="onSelected($event)" [players]="gameInfo!.players"
@@ -7,8 +7,7 @@
         (click)="showHint = !showHint">רמז</button>
     </div>
     <p [ngClass]="{'opacity-100 max-h-40 mt-2': showHint,'opacity-0 max-h-0 overflow-hidden': !showHint}"
-      [innerHTML]="gameInfo!.hint"
-      class="hint transition-all duration-500 ease-in-out mt-2 p-2 bg-white/50 rounded-xl">
+      [innerHTML]="gameInfo!.hint" class="hint transition-all duration-500 ease-in-out mt-2 p-2 bg-white/50 rounded-xl">
     </p>
 
     <ng-container *ngIf="guessedPlayers?.length">
@@ -30,8 +29,7 @@
       </ul>
     </ng-container>
 
-    <app-game-nav (prev)="onPreviousClicked()" (next)="onNextClicked()" class="mt-auto"
-      [gameId]="gameInfo!.id"></app-game-nav>
+    <app-game-nav (pageChanged)="onPageChanged($event)" class="mt-auto" [gameInfo]="gameInfo" *ngIf="gameInfo"></app-game-nav>
   </div>
 </div>
 
