--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,5 +1,5 @@
 <div class="relative w-full min-h-[calc(100vh-62px)] bg-cover bg-center">
-    <app-countdown [targetDate]="next_player_ts.toJSON()"></app-countdown>
+    <app-countdown *ngIf="next_player_ts" [targetDate]="next_player_ts.toJSON()"></app-countdown>
 
     <img src="images/mobile_banner.webp" class="mb-6 sm:hidden -mt-2 mx-auto" alt="Netflix banner" />
 
