--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,7 +15,7 @@
     </a>
   </div>
   <div class="text-center text-lg absolute left-[50%] translate-x-[-50%]"></div>
-  <div class="font-bold text-red-500 text-right">
+  <div class="font-bold text-red-500 text-right" *ngIf="!isAdminRoute">
     <a href="https://www.netflix.com/" class="netflix-logo bg-white py-2 px-3 block">
       <svg viewBox="0 0 111 30" version="1.1" xmlns="http://www.w3.org/2000/svg" width="110" xmlns:xlink="http://www.w3.org/1999/xlink">
           <path
