--- a/src/app/components/admin/logout/logout.component.html
+++ b/src/app/components/admin/logout/logout.component.html
@@ -1,4 +1,4 @@
-<button *ngIf="isLoggedIn" (click)="logout()"
+<button *ngIf="isLoggedIn()" (click)="logout()"
     class="fixed cursor-pointer bottom-4 right-4 bg-red-500 hover:bg-red-600 text-white rounded-full p-4 shadow-lg transition-colors duration-200"
     title="Logout">
     <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
