--- a/src/app/components/game/game.component.html
+++ b/src/app/components/game/game.component.html
@@ -1,4 +1,5 @@
 <div class="relative w-full min-h-[calc(100vh-62px)] bg-cover bg-center flex flex-col" *ngIf="game$ | async as gameInfo">
+  {{gameInfo.game_number}}
   <div class="p-4 pb-0 max-w-lg mx-auto w-full flex-grow flex flex-col">
     <div class="flex gap-3">
       <app-autocomplete (selected)="onSelected($event)" [players]="gameInfo!.players"
